--- a/.github/workflows/building-blocks.yml
+++ b/.github/workflows/building-blocks.yml
@@ -9,13 +9,13 @@ jobs:
       - name: Say hello
         run: echo "Hello, world!"
 
-  echo-goodbye:
-    runs-on: self-hosted
-    steps:
-      - name: Successful step
-        run: |
-          echo "I will succeed"
-          exit 0
-      - name: Say goodbye
-        run: echo "Goodbye!"
+#   echo-goodbye:
+#     runs-on: self-hosted
+#     steps:
+#       - name: Successful step
+#         run: |
+#           echo "I will succeed"
+#           exit 0
+#       - name: Say goodbye
+#         run: echo "Goodbye!"
 
